@@ -1,10 +1,10 @@
 package com.osrsd;
 
 import com.displee.cache.CacheLibrary;
-import com.osrsd.command.PrintSequences;
-import com.osrsd.command.PrintSpotAnimations;
+import com.osrsd.command.*;
 import lombok.extern.slf4j.Slf4j;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
@@ -27,27 +27,36 @@ public class App {
     }
 
     public static void main(String... args) {
-        long start = System.currentTimeMillis();
         log.info("Executing application...");
+        final File file = new File(String.format("%s/dump", defaultPath()));
+
+        if (!file.exists() && !file.mkdir()) {
+            throw new RuntimeException(String.format("Couldn't create directory at %s.", file.getPath()));
+        }
 
         final CacheLibrary library = CacheLibrary.create(defaultPath());
-        final List<Runnable> commands = Arrays.asList(
+        final List<Runnable> commands = List.of(
+                new PrintInvs(library),
+                new PrintObjects(library),
+                new PrintEnums(library),
+                new PrintNpcs(library),
+                new PrintItems(library),
+                new PrintParams(library),
                 new PrintSequences(library),
-                new PrintSpotAnimations(library)
+                new PrintSpotAnimations(library),
+                new PrintVarbits(library),
+                new PrintSoundEffects(library),
+                new PrintSprites(library),
+                new PrintTextures(library)
         );
 
         int cores = Runtime.getRuntime().availableProcessors();
         if (cores == 1) {
             commands.forEach(Runnable::run);
-            log.info(performance(start));
         } else {
-            final ExecutorService pool = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+            final ExecutorService pool = Executors.newFixedThreadPool(cores);
             commands.forEach(pool::execute);
             pool.shutdown();
-
-            do {
-                log.info(performance(start));
-            } while (pool.isTerminated());
         }
     }
 
@@ -55,8 +64,8 @@ public class App {
         return String.format("./%s", properties.getProperty("cache.version"));
     }
 
-    private static String performance(long start) {
-        return String.format("Took %sms to dump.", System.currentTimeMillis() - start);
+    public static void prompt(Class<? extends Runnable> command, long start) {
+        log.info(String.format("%s took %sms to dump.", command.getSimpleName(), System.currentTimeMillis() - start));
     }
 
 }
